--- a/app/src/main/res/layout/breed_image_item.xml
+++ b/app/src/main/res/layout/breed_image_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -12,18 +13,20 @@
         android:layout_margin="8dp"
         android:contentDescription="@string/dog_breed_image"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/breed_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/breed_text"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:textAppearance="?attr/textAppearanceHeadline5"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/breed_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="@+id/breed_image"
+        app:layout_constraintStart_toStartOf="@+id/breed_image"
+        app:layout_constraintTop_toBottomOf="@+id/breed_image"
+        tools:text="qwertyuiopasdfghjklçzxcvbnmqwertyuiopasd" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
