--- a/app/src/main/res/layout/activity_breed_detail.xml
+++ b/app/src/main/res/layout/activity_breed_detail.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/name"
-                    android:textSize="18sp" />
+                    style="@style/detail_label" />
 
                 <TextView
                     android:id="@+id/name_text_view"
@@ -54,7 +54,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/group"
-                    android:textSize="18sp" />
+                    style="@style/detail_label"/>
 
                 <TextView
                     android:id="@+id/group_text_view"
@@ -76,7 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/origin"
-                    android:textSize="18sp" />
+                    style="@style/detail_label"/>
 
                 <TextView
                     android:id="@+id/origin_text_view"
@@ -98,14 +98,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/temperament"
-                    android:textSize="18sp" />
+                    style="@style/detail_label"/>
 
                 <TextView
                     android:id="@+id/temperament_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ellipsize="end"
-                    android:maxLines="1"
                     tools:text="Temperament"
                     android:textSize="18sp" />
             </LinearLayout>
