--- a/app/src/main/res/layout/breed_item.xml
+++ b/app/src/main/res/layout/breed_item.xml
@@ -12,6 +12,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -24,7 +25,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/name"
-                android:textSize="18sp" />
+                style="@style/detail_label"
+                />
 
             <TextView
                 android:id="@+id/name_text_view"
@@ -48,7 +50,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/group"
-                android:textSize="18sp" />
+                style="@style/detail_label" />
 
             <TextView
                 android:id="@+id/group_text_view"
@@ -70,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/origin"
-                android:textSize="18sp" />
+                style="@style/detail_label" />
 
             <TextView
                 android:id="@+id/origin_text_view"
