--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:background="@drawable/search_background"
         />
 
     <androidx.recyclerview.widget.RecyclerView android:id="@+id/search_results_recycler_view"
